Fixed white box at bottom of searchbar page on mobile

--- a/src/components/layout/SearchPage.module.css
+++ b/src/components/layout/SearchPage.module.css
@@ -8,7 +8,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   z-index: -1;
 }
@@ -34,8 +34,19 @@
   width: 100%;
 }
 
+/* Mobile Devices */
+@media screen and (min-width: 320px) and (max-width: 500px) {
+  /* .search {
+    top: 130px;
+  } */
+}
+
 /* Tablets */
 @media screen and (min-width: 768px) and (max-width: 1024px) {
+  /* .search {
+    top: 160px;
+  } */
+
   .search p {
     margin-bottom: 25px;
     width: 84%;
